# duneanaobj

./: CMakeLists.txt  README.md
duneanaobj/StandardRecord/: CMakeLists.txt  SRBeamBranch.h  SRCVNScoreBranch.h  SRCommonRecoBranch.h  SRDetectorMetaBranch.h  SRDirectionBranch.h  SREnums.h  SRFD.cxx  SRFD.h  SRFDBranch.h  SRGAr.h  SRGArECAL.h  SRGArTrack.cxx  SRGArTrack.h  SRGlobal.cxx  SRGlobal.h  SRInteraction.h  SRInteractionBranch.h  SRLorentzVector.cxx  SRLorentzVector.h  SRMINERvA.cxx  SRMINERvA.h  SRMeta.cxx  SRMeta.h  SRNDAssnBranch.h  SRNDBranch.h  SRNDLAr.cxx  SRNDLAr.h  SRNDShowerAssn.h  SRNDTrackAssn.h  SRNDTrackMatch.h  SRNeutrinoCandidate.cxx  SRNeutrinoCandidate.h  SRNeutrinoEnergyBranch.h  SRNeutrinoHypothesisBranch.h  SRParticleTruth.h  SRRecoObjBase.h  SRRecoParticle.h  SRRecoParticlesBranch.h  SRSAND.h  (+19 more)
duneanaobj/StandardRecord/Flat/: CMakeLists.txt  Prolog.h
duneanaobj/StandardRecord/Proxy/: CMakeLists.txt  EpilogFwd.h  Instantiations.cxx
ups/: CMakeLists.txt  product_deps
